--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,32 @@
+@import url('https://fonts.cdnfonts.com/css/sf-pro-display');
+
 @import "tailwindcss";
+
 
 [data-nextjs-dialog] {
   display: none !important;
 }
+
+/* @font-face {
+  font-family: "Monigue";
+  src: url("/fonts/Monigue.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+} */
+
+
+
+/* @font-face {
+  font-family: "Typologic";
+  src: url("/fonts/Typologic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+} */
+
+body {
+  font-family: 'SF Pro Display', sans-serif;
+}
+
 
 input:-webkit-autofill,
 textarea:-webkit-autofill {
